--- a/app/templates/includes/components/brands-slider.twig
+++ b/app/templates/includes/components/brands-slider.twig
@@ -1,5 +1,6 @@
 	<!-- begin brands-slider -->
 	<div class="brands-slider preload">
+		<h2 class="uk-text-center">Купить онлайн</h2>
 		<div class="uk-container">
 			<div class="slider">
 				<div class="slide"><a href=""><img data-lazy="img/media/sliders/slider-brand-img-1.svg" alt=""></a></div>
