--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -5,8 +5,7 @@
 	<div class="main-banner">
 		<div class="uk-container uk-container--large">
 
-			<div class="main-banner__img" uk-scrollspy="cls:border-anim">
-				<img src="img/media/main-banner-1-1440x730.png" alt="">
+			<div class="main-banner__img" style="background-image:url(img/media/main-banner-1-1440x730.png)" uk-scrollspy="cls:border-anim">
 <!-- <svg>
 	<defs>
 		<clipPath id="cut-center">
