--- a/app/sass/content/typebox-section.scss
+++ b/app/sass/content/typebox-section.scss
@@ -2,9 +2,16 @@
 /*______ Typebox-section ______*/
 
 .typebox-section {
-	margin-bottom: 130px;
-	padding: 130px 0;
+
 	background-color: #faf4ef;
+	@media (min-width: $mob-xs) {
+		margin-bottom: 60px;
+		padding: 60px 0;
+	};
+	@media (min-width: $desk-w) {
+		margin-bottom: 130px;
+		padding: 130px 0;
+	};
 }
 
 .typebox-list {
@@ -15,9 +22,18 @@
 	.item {
 		position: relative;
 		flex-basis: calc(100%/3);
-		margin: 0 auto 30px;
+		margin: 0 auto 50px;
+		&:last-child {
+			margin-bottom: 0;
+		}
+		@media (min-width: $mob-xs) {
+			flex-basis: 100%;
+			max-width: 400px;
+		};
 		@media (min-width: $desk-w) {
 			margin-bottom: 0;
+			flex-basis: calc(100%/3);
+			max-width: none;
 		};
 		&__img {
 			position: relative;
@@ -65,6 +81,15 @@
 	&--four-elements {
 		.item {
 			flex-basis: calc(100%/4);
+			@media (min-width: $mob-xs) {
+				flex-basis: 100%;
+				max-width: 400px;
+			};
+			@media (min-width: $desk-w) {
+				margin-bottom: 0;
+				flex-basis: calc(100%/4);
+				max-width: none;
+			};
 		}
 	}
 }
