--- a/app/sass/header/header-desk.scss
+++ b/app/sass/header/header-desk.scss
@@ -68,24 +68,28 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 90px;
+	
 	z-index: 500;
 	@media (min-width: $mob-xs) {
 		flex-wrap: wrap;
+	};
+	@media (min-width: $mob-s) {
+		flex-wrap: nowrap;
+		height: 90px;
 	};
 	li {
 		margin-right: 40px;
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		@media (min-width: $mob-xs) {
+		@media (min-width: $mob-xs) and (max-width: $tablet-w) {
 			margin-right: 0;
 			padding: 0;
 		};
 		&:first-child {
 			position: relative;
 			padding-right: 40px;
-			@media (min-width: $mob-xs) {
+			@media (min-width: $mob-xs) and (max-width: $tablet-w) {
 				padding-right: 0;
 			};
 			&:after {
@@ -111,7 +115,7 @@
 			position: relative;
 			margin-right: 0;
 			padding-left: 40px;
-			@media (min-width: $mob-xs) {
+			@media (min-width: $mob-xs) and (max-width: $tablet-w) {
 				padding-left: 0;
 			};
 			&:after {
@@ -141,12 +145,14 @@
 			font-weight: 700;
 			color: $white;
 			@media (min-width: $mob-xs) {
-				//padding: 0;
 				font-size: 12px;
 				line-height: 18px;
-				svg {
-					//display: none;
-				}
+			};
+			@media (min-width: $tablet-w) {
+				font-size: 14px;
+			};
+			@media (min-width: $desk-w) {
+				font-size: 16px;
 			};
 			&:hover {
 				text-decoration: none;
@@ -191,6 +197,38 @@
 			order: 5;
 			width: 50%;
 		}
+		@media (min-width: $mob-s) {
+			&:nth-child(1) {
+				order: 1;
+				width: auto;
+			}
+			&:nth-child(2) {
+				order: 2;
+				width: auto;
+			}
+			&:nth-child(3) {
+				margin-top: -30px;
+				order: 3;
+				width: auto;
+			}
+			&:nth-child(4) {
+				order: 4;
+				width: auto;
+			}
+			&:nth-child(5) {
+				order: 5;
+				width: auto;
+			}
+		};
+		@media (min-width: $mob-s) and (max-width: $tablet-w) {
+			margin: 0 5px;
+		}
+
+		@media (min-width: $desk-w) {
+			&:nth-child(3) {
+				margin-top: 0;
+			}
+		};
 	}
 }
 
@@ -198,14 +236,18 @@
 
 .logo1 {
 	display: block;
-	width: 150px;
-	height: 150px;
 	border-radius: 50%;
-	//background-color: #ffa722;
-	//background: linear-gradient(75deg, #ff9300 0%, #ffc90e 100%);
 	@media (min-width: $mob-xs) {
 		width: 100px;
 		height: 100px;
+	};
+	@media (min-width: $tablet-w) {
+		width: 125px;
+		height: 125px;
+	};
+	@media (min-width: $desk-w) {
+		width: 150px;
+		height: 150px;
 	};
 	a {
 		position: relative;
