--- a/app/sass/sliders/sliders.scss
+++ b/app/sass/sliders/sliders.scss
@@ -1,29 +1,65 @@
 /*______ SLIDERS ______*/
 
 .brands-slider {
-	margin-bottom: 130px;
+	@media (min-width: $mob-xs) {
+		margin-bottom: 60px;
+	};
+	@media (min-width: $tablet-w) {
+		margin-bottom: 90px;
+	};
+	@media (min-width: $desk-w) {
+		margin-bottom: 130px;
+	};
 	.uk-container {
 		position: relative;
 	}
 	.slider {
 		&__arrows {
-			max-width: 1300px;
+			
 			position: absolute;
 			top: 50%;
 			transform: translateY(-50%);
 			width: 100%;
 			z-index: 650;
+			@media (min-width: $mob-xs) {
+				display: none;
+			};
+			@media (min-width: $desk-w) {
+				display: block;
+				max-width: 1140px;
+			};
+			@media (min-width: 1360px) {
+				max-width: 1300px;
+			};
 		}
 		.slide {
 			a {
 				display: flex;
 				width: 100%;
-				height: 100px;
 				justify-content: center;
 				align-items: center;
+				@media (min-width: $mob-xs) {
+					height: 60px;
+				};
+				@media (min-width: $mob-s) {
+					height: 80px;
+				};
+				@media (min-width: $tablet-w) {
+					height: 100px;
+				};
+				img {
+					max-width: 90%;
+					@media (min-width: $mob-s) {
+						max-width: 70%;
+					};
+				}
 			}
 		}
 		.slick-dots {
+			bottom: -25px;
+			@media (min-width: $tablet-w) {
+				bottom: -50px;
+			};
 			li {
 				width: auto;
 				height: auto;
@@ -60,16 +96,15 @@
 
 	.slide-prev {
 		left: 0;
-		@media (min-width: $desk-w) {
-			left: -120px;	
+		@media (min-width: 1460px) {
+			left: -5%;
 		};
 	}
 
 	.slide-next {
-		left: auto;
 		right: 0;
-		@media (min-width: $desk-w) {
-			right: -120px;	
+		@media (min-width: 1460px) {
+			right: -5%;
 		};
 		
 	}
@@ -80,6 +115,13 @@
 		position: relative;
 	}
 	.slider {
+		height: 500px;
+		overflow: hidden;
+		transition: height 1s ease;
+		&.slick-initialized {
+			height: auto;
+			overflow: visible;
+		}
 		button {
 			width: 0;
 			height: 0;
@@ -88,12 +130,15 @@
 			}
 		}
 		&__arrows {
-			max-width: 1300px;
+			
 			position: absolute;
 			top: 50%;
 			transform: translateY(-50%);
 			width: 100%;
 			z-index: 650;
+			@media (min-width: 1460px) {
+				max-width: 1300px;	
+			};
 		}
 	}
 	.slide-prev,
@@ -103,19 +148,24 @@
 		display: flex;
 		transform: translateY(-50%);
 		cursor: pointer;
+		svg {
+			width: 100px;
+			@media (min-width: 1460px) {
+				width: auto;
+			};
+		}
 	}
 
 	.slide-prev {
 		left: 0;
-		@media (min-width: $desk-w) {
+		@media (min-width: 1460px) {
 			left: -200px;	
 		};
 	}
 
 	.slide-next {
-		left: auto;
 		right: 0;
-		@media (min-width: $desk-w) {
+		@media (min-width: 1460px) {
 			right: -200px;	
 		};
 		
