--- a/app/sass/content/advantages-list.scss
+++ b/app/sass/content/advantages-list.scss
@@ -7,18 +7,24 @@
 	};
 	&__inner {
 		position: relative;
-		padding: 400px 0;
-		width: 100%;
-		min-height: 850px;
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		flex-wrap: wrap;
+		@media (min-width: $desk-w) {
+			padding: 400px 0;
+			width: 100%;
+			min-height: 850px;
+		};
 	}
 	.center-box {
 		position: relative;
-		opacity: 0;
+		margin: 50px 0;
 		z-index: 800;
 		transition: opacity .4s ease-out;
+		@media (min-width: $desk-w) {
+			opacity: 0;
+		};
 		img {
 			position: relative;
 			z-index: 500;
@@ -27,13 +33,15 @@
 			position: absolute;
 			top: 50%;
 			left: 50%;
+			transform: translate(-50%, -50%) scale(0);
 			width: 100%;
 			height: 100%;
 			z-index: 400;
-			transform: translate(-50%, -50%) scale(0);
 			transition: all .65s ease 2.5s;
-
 		}
+		@media (min-width: $desk-w) {
+			margin: 0
+		};
 		&.show {
 			opacity: 1;
 			svg {
@@ -48,111 +56,28 @@
 	}
 }
 
-/* .advantages-list {
-	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	width: 100%;
-	height: 100%;
-	@include list-reset;
-	display: block;
-	vertical-align: top;
-	counter-reset: item;
-	li {
-		position: absolute;
-		width: 300px;
-		min-height: 200px;
-		opacity: 0;
-		transition: opacity .3s, transform .5s ease-out;
-		&:before {
-			position: absolute;
-			top: 50%;
-			left: 0;
-			counter-increment: item;	
-			content: "0"counter(item);
-		}
-		&:nth-child(1) {
-			top: 0;
-			left: 50%;
-			transform: translate(-50%, 20%);
-			transition-delay: .3s;
-		}
-		&:nth-child(2) {
-			top: 50%;
-			right: 0;
-			transform: translate(10%, -50%);
-			transition-delay: .3s;
-		}
-		&:nth-child(3) {
-			top: 65%;
-			right: 0;
-			transform: translate(-40%, 0);
-			transition-delay: .6s;
-		}
-		&:nth-child(4) {
-			bottom: 0;
-			left: 50%;
-			transform: translate(-100%, 20%);
-			transition-delay: .9s;
-		}
-		&:nth-child(5) {
-			top: 65%;
-			left: 0;
-			transform: translate(-10%, 0);
-			transition-delay: 1.2s;
-		}
-		&:nth-child(6) {
-			top: 50%;
-			left: 0;
-			transform: translate(-10%, -50%);
-			transition-delay: 1.5s;
-		}
-	}
-	&.show {
-		li {
-			opacity: 1;
-			&:nth-child(1) {
-				transform: translate(-50%, 30%);
-			}
-			&:nth-child(2) {
-				transform: translate(0, -50%);
-			}
-			&:nth-child(3) {
-				transform: translate(-50%, 0);
-			}
-			&:nth-child(4) {
-				transform: translate(-100%, 10%);
-			}
-			&:nth-child(5) {
-				transform: translate(0, 0);
-			}
-			&:nth-child(6) {
-				transform: translate(0, -50%);
-			}
-		}
-	}
-} */
-
 
 .advantages-list {
-	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
+
 	width: 100%;
 	height: 100%;
 	@include list-reset;
-	display: block;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	flex-wrap: wrap;
 	vertical-align: top;
 	counter-reset: item;
-	li {
+	@media (min-width: $desk-w) {
 		position: absolute;
-		width: 300px;
-		min-height: 200px;
-		opacity: 0;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		display: block;
+	};
+	li {
+		position: relative;
 		transition: opacity .3s, transform 1.2s, top 1.2s, bottom 1.2s, left 1.2s, right 1.2s ease-out;
 		&:before {
 			position: absolute;
@@ -161,72 +86,82 @@
 			counter-increment: item;	
 			content: "0"counter(item);
 			transform: translateY(-50%);
+			z-index: 500;
 		}
-		&:nth-child(1) {
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			transition-delay: .3s;
-		}
-		&:nth-child(2) {
-			top: 50%;
-			right: 50%;
-			transform: translate(50%, -50%);
-			transition-delay: .6s;
-		}
-		&:nth-child(3) {
-			top: 50%;
-			right: 50%;
-			transform: translate(50%, -50%);
-			transition-delay: .9s;
-		}
-		&:nth-child(4) {
-			bottom: 50%;
-			left: 50%;
-			transform: translate(-50%, 50%);
-			transition-delay: 1.2s;
-		}
-		&:nth-child(5) {
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			transition-delay: 1.5s;
-		}
-		&:nth-child(6) {
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			transition-delay: 1.8s;
-		}
-	}
-	&.show {
-		li {
-			opacity: 1;
+		@media (min-width: $desk-w) {
+			position: absolute;
+			width: 300px;
+			min-height: 200px;
+			opacity: 0;
 			&:nth-child(1) {
-				top: 0;
-				transform: translate(-50%, 25%);
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				transition-delay: .3s;
 			}
 			&:nth-child(2) {
-				right: 0;
-				transform: translate(0, -75%);
+				top: 50%;
+				right: 50%;
+				transform: translate(50%, -50%);
+				transition-delay: .6s;
 			}
 			&:nth-child(3) {
-				right: 0;
-				transform: translate(-25%, 50%);
+				top: 50%;
+				right: 50%;
+				transform: translate(50%, -50%);
+				transition-delay: .9s;
 			}
 			&:nth-child(4) {
-				bottom: 0;
-				transform: translate(-75%, 10%);
+				bottom: 50%;
+				left: 50%;
+				transform: translate(-50%, 50%);
+				transition-delay: 1.2s;
 			}
 			&:nth-child(5) {
-				left: 0;
-				transform: translate(0, 50%);
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				transition-delay: 1.5s;
 			}
 			&:nth-child(6) {
-				left: 0;
-				transform: translate(0, -100%);
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				transition-delay: 1.8s;
 			}
 		}
+	};
+	&.show {
+		@media (min-width: $desk-w) {
+			li {
+				opacity: 1;
+				&:nth-child(1) {
+					top: 0;
+					transform: translate(-50%, 25%);
+				}
+				&:nth-child(2) {
+					right: 0;
+					transform: translate(0, -75%);
+				}
+				&:nth-child(3) {
+					right: 0;
+					transform: translate(-25%, 50%);
+				}
+				&:nth-child(4) {
+					bottom: 0;
+					transform: translate(-75%, 10%);
+				}
+				&:nth-child(5) {
+					left: 0;
+					transform: translate(0, 50%);
+				}
+				&:nth-child(6) {
+					left: 0;
+					transform: translate(0, -100%);
+				}
+			}
+		};
+
 	}
 }
 
@@ -234,17 +169,25 @@
 .advantage-item {
 	position: relative;
 	padding-top: 160px;
+	max-width: 230px;
+	margin: 0 auto;
+	@media (min-width: $desk-w) {
+		margin: 0;
+		max-width: none;
+	};
 	&__img {
-		position: absolute;
-		top: 0;
-		right: 0;
-		padding-top: 20px;
-		width: 230px;
-		height: 230px;
 		display: flex;
 		justify-content: center;
 		align-items: flex-start;
 		z-index: 100;
+		@media (min-width: $desk-w) {
+			position: absolute;
+			top: 0;
+			right: 0;
+			padding-top: 20px;
+			width: 230px;
+			height: 230px;
+		};
 		svg {
 			position: absolute;
 			top: 0;
