--- a/app/templates/includes/components/eggs-slider.twig
+++ b/app/templates/includes/components/eggs-slider.twig
@@ -1,159 +1,187 @@
 
-<div class="eggs-section" uk-scrollspy="target: .egg-section; cls: slide-right svg-animate; delay: 300">
+<div class="eggs-section" uk-scrollspy="cls: slide-up svg-animate;">
 
-	<div class="uk-grid uk-child-width-1-3@m uk-child-width-1-2" uk-grid>
-
-		
-		<div class="egg-section">
-			<div class="egg-section__inner">
-				<div class="egg-section__img">
-					<img src="img/media/egg-img-1.svg" alt="">
-				</div>
-				<div class="egg-section__timer">
-					<div class="circle-timer" data-time="2">
-						<div class="circle-timer__outer">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
-								<circle class="circle-2" cx="27" cy="27" r="27"></circle>
-							</svg>
-						</div>
-						<div class="circle-timer__inner">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
-								<circle class="circle-1" cx="25" cy="25" r="25"></circle>
-							</svg>
+<div class="custom-slider">
+	<div class="slider">
+		<div class="slide">
+			<div class="uk-grid uk-child-width-1-3@m uk-child-width-1-2" uk-grid>
+			
 				
+				<div class="egg-section">
+					<div class="egg-section__inner">
+						<div class="egg-section__img">
+							<img src="img/media/egg-img-1.svg" alt="">
 						</div>
-						<div class="circle-timer__value">2</div>
+						<div class="egg-section__timer">
+							<div class="circle-timer" data-time="2">
+								<div class="circle-timer__outer">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
+										<circle class="circle-2" cx="27" cy="27" r="27"></circle>
+									</svg>
+								</div>
+								<div class="circle-timer__inner">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+										<circle class="circle-1" cx="25" cy="25" r="25"></circle>
+									</svg>
+						
+								</div>
+								<div class="circle-timer__value">2</div>
+							</div>
+							<div class="egg-section__text">Минуты</div>
+						</div>
 					</div>
-					<div class="egg-section__text">Минуты</div>
 				</div>
+			
+				<div class="egg-section">
+					<div class="egg-section__inner">
+						<div class="egg-section__img">
+							<img src="img/media/egg-img-2.svg" alt="">
+						</div>
+						<div class="egg-section__timer">
+							<div class="circle-timer" data-time="4">
+								<div class="circle-timer__outer">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
+										<circle class="circle-2" cx="27" cy="27" r="27"></circle>
+									</svg>
+								</div>
+								<div class="circle-timer__inner">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+										<circle class="circle-1" cx="25" cy="25" r="25"></circle>
+									</svg>
+						
+								</div>
+								<div class="circle-timer__value">4</div>
+							</div>
+							<div class="egg-section__text">Минуты</div>
+						</div>
+					</div>
+				</div>
+			
+				<div class="egg-section">
+					<div class="egg-section__inner">
+						<div class="egg-section__img">
+							<img src="img/media/egg-img-3.svg" alt="">
+						</div>
+						<div class="egg-section__timer">
+							<div class="circle-timer" data-time="6">
+								<div class="circle-timer__outer">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
+										<circle class="circle-2" cx="27" cy="27" r="27"></circle>
+									</svg>
+								</div>
+								<div class="circle-timer__inner">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+										<circle class="circle-1" cx="25" cy="25" r="25"></circle>
+									</svg>
+						
+								</div>
+								<div class="circle-timer__value">6</div>
+							</div>
+							<div class="egg-section__text">Минут</div>
+						</div>
+					</div>
+				</div>
+			
+				<div class="egg-section">
+					<div class="egg-section__inner">
+						<div class="egg-section__img">
+							<img src="img/media/egg-img-4.svg" alt="">
+						</div>
+						<div class="egg-section__timer">
+							<div class="circle-timer" data-time="8">
+								<div class="circle-timer__outer">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
+										<circle class="circle-2" cx="27" cy="27" r="27"></circle>
+									</svg>
+								</div>
+								<div class="circle-timer__inner">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+										<circle class="circle-1" cx="25" cy="25" r="25"></circle>
+									</svg>
+						
+								</div>
+								<div class="circle-timer__value">8</div>
+							</div>
+							<div class="egg-section__text">Минут</div>
+						</div>
+					</div>
+				</div>
+			
+				<div class="egg-section">
+					<div class="egg-section__inner">
+						<div class="egg-section__img">
+							<img src="img/media/egg-img-5.svg" alt="">
+						</div>
+						<div class="egg-section__timer">
+							<div class="circle-timer" data-time="10">
+								<div class="circle-timer__outer">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
+										<circle class="circle-2" cx="27" cy="27" r="27"></circle>
+									</svg>
+								</div>
+								<div class="circle-timer__inner">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+										<circle class="circle-1" cx="25" cy="25" r="25"></circle>
+									</svg>
+						
+								</div>
+								<div class="circle-timer__value">10</div>
+							</div>
+							<div class="egg-section__text">Минут</div>
+						</div>
+					</div>
+				</div>
+			
+				<div class="egg-section">
+					<div class="egg-section__inner">
+						<div class="egg-section__img">
+							<img src="img/media/egg-img-6.svg" alt="">
+						</div>
+						<div class="egg-section__timer">
+							<div class="circle-timer" data-time="15">
+								<div class="circle-timer__outer">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
+										<circle class="circle-2" cx="27" cy="27" r="27"></circle>
+									</svg>
+								</div>
+								<div class="circle-timer__inner">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+										<circle class="circle-1" cx="25" cy="25" r="25"></circle>
+									</svg>
+						
+								</div>
+								<div class="circle-timer__value">15</div>
+							</div>
+							<div class="egg-section__text">Минут</div>
+						</div>
+					</div>
+				</div>
+			
+			</div>
+			
+			<div class="custom-slider__text">
+				<p>
+					Заранее выложите яйца из холодильника, чтобы они стали комнатной температуры. Я кладу яйца для варки в кастрюльку и заливаю теплой водой из-под крана. Когда кастрюлька наполнится, постепенно поворачиваю кран и увеличиваю температуру воды с яйцами до максимально горячей. Это сэкономит около минуты при варке яиц.
+				</p>
+				<a href="" class="green-link">Подробнее</a>
 			</div>
 		</div>
-
-		<div class="egg-section">
-			<div class="egg-section__inner">
-				<div class="egg-section__img">
-					<img src="img/media/egg-img-2.svg" alt="">
-				</div>
-				<div class="egg-section__timer">
-					<div class="circle-timer" data-time="4">
-						<div class="circle-timer__outer">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
-								<circle class="circle-2" cx="27" cy="27" r="27"></circle>
-							</svg>
-						</div>
-						<div class="circle-timer__inner">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
-								<circle class="circle-1" cx="25" cy="25" r="25"></circle>
-							</svg>
-				
-						</div>
-						<div class="circle-timer__value">4</div>
-					</div>
-					<div class="egg-section__text">Минуты</div>
-				</div>
-			</div>
+		<div class="slide">
+			<img src="img/media/eggs-big-img.png" alt="">
 		</div>
-
-		<div class="egg-section">
-			<div class="egg-section__inner">
-				<div class="egg-section__img">
-					<img src="img/media/egg-img-3.svg" alt="">
-				</div>
-				<div class="egg-section__timer">
-					<div class="circle-timer" data-time="6">
-						<div class="circle-timer__outer">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
-								<circle class="circle-2" cx="27" cy="27" r="27"></circle>
-							</svg>
-						</div>
-						<div class="circle-timer__inner">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
-								<circle class="circle-1" cx="25" cy="25" r="25"></circle>
-							</svg>
-				
-						</div>
-						<div class="circle-timer__value">6</div>
-					</div>
-					<div class="egg-section__text">Минут</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="egg-section">
-			<div class="egg-section__inner">
-				<div class="egg-section__img">
-					<img src="img/media/egg-img-4.svg" alt="">
-				</div>
-				<div class="egg-section__timer">
-					<div class="circle-timer" data-time="8">
-						<div class="circle-timer__outer">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
-								<circle class="circle-2" cx="27" cy="27" r="27"></circle>
-							</svg>
-						</div>
-						<div class="circle-timer__inner">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
-								<circle class="circle-1" cx="25" cy="25" r="25"></circle>
-							</svg>
-				
-						</div>
-						<div class="circle-timer__value">8</div>
-					</div>
-					<div class="egg-section__text">Минут</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="egg-section">
-			<div class="egg-section__inner">
-				<div class="egg-section__img">
-					<img src="img/media/egg-img-5.svg" alt="">
-				</div>
-				<div class="egg-section__timer">
-					<div class="circle-timer" data-time="10">
-						<div class="circle-timer__outer">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
-								<circle class="circle-2" cx="27" cy="27" r="27"></circle>
-							</svg>
-						</div>
-						<div class="circle-timer__inner">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
-								<circle class="circle-1" cx="25" cy="25" r="25"></circle>
-							</svg>
-				
-						</div>
-						<div class="circle-timer__value">10</div>
-					</div>
-					<div class="egg-section__text">Минут</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="egg-section">
-			<div class="egg-section__inner">
-				<div class="egg-section__img">
-					<img src="img/media/egg-img-6.svg" alt="">
-				</div>
-				<div class="egg-section__timer">
-					<div class="circle-timer" data-time="15">
-						<div class="circle-timer__outer">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
-								<circle class="circle-2" cx="27" cy="27" r="27"></circle>
-							</svg>
-						</div>
-						<div class="circle-timer__inner">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
-								<circle class="circle-1" cx="25" cy="25" r="25"></circle>
-							</svg>
-				
-						</div>
-						<div class="circle-timer__value">15</div>
-					</div>
-					<div class="egg-section__text">Минут</div>
-				</div>
-			</div>
-		</div>
-
 	</div>
+	<div class="slider__arrows">
+		<div class="slide-prev">
+			<svg width="154px" height="29px" class="slider-arrow">
+			  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#big-arrow-left"></use>
+			</svg>
+		</div>
+		<div class="slide-next">
+			<svg width="154px" height="29px" class="slider-arrow">
+			  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#big-arrow-right"></use>
+			</svg>
+		</div>
+	</div>
+</div>
 
 </div>
