--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -2,166 +2,9 @@
 {% set title="Главная" %}
 {% set theme="theme-green" %}
 {% block content %}
-	<div class="main-banner">
-		<div class="uk-container uk-container--large">
 
-			<div class="main-banner__img" style="background-image:url(img/media/main-banner-1-1440x730.png)" uk-scrollspy="cls:border-anim">
-<!-- <svg>
-	<defs>
-		<clipPath id="cut-center">
-			<ellipse fill="red" rx="800px" ry="200px" cx="690" cy="-100" />
-		</clipPath>
-	</defs>
-	<rect
-		width="100%"
-		height="100px"
-		clip-path="url(#cut-center)"
-		fill="blue"
-		></rect>
-	<rect
-		width="100%"
-		height="100px"
-		fill="red"
-		></rect>
-</svg> -->
-			</div>
-
-			<div class="main-banner__text">
-				<div class="main-banner__title">
-					<h1 uk-scrollspy="cls:slide-up">Натуральный продукт</h1>
-				</div>
-				<div class="main-banner__subtitle">
-					для всей семьи
-				</div>
-				<svg width="29px" height="67px" class="main-banner__arrow-down">
-				  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#arrow-down"></use>
-				</svg>
-			</div>
-			
-			<div class="fly-box " uk-scrollspy="cls: slide-up-abs uk-visible; delay: 500">
-				<img src="img/media/egg-box-1.png" alt="Лето">
-			</div>
-
-		</div>
-	</div>
-
-	<section class="advantages-section">
-		<div class="uk-container">
-			<div class="advantages-section__inner">
-				<ul class="advantages-list">
-					<li>
-						<div class="advantage-item">
-							<div class="advantage-item__img">
-								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
-								</svg>
-								<img data-src="img/media/advantage-img/advantage-img-1.svg" alt="" uk-img>
-							</div>
-							<div class="advantage-item__text">
-								<div class="title-h3">Контроль свежести</div>
-								<div class="text">
-									Мы ставим дату сортировки на каждом яйце, чтобы вы были уверены в его свежести
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="advantage-item">
-							<div class="advantage-item__img">
-								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
-								</svg>
-								<img data-src="img/media/advantage-img/advantage-img-2.svg" alt="" uk-img>
-							</div>
-							<div class="advantage-item__text">
-								<div class="title-h3">Яркий желток</div>
-								<div class="text">
-									Благодаря содержанию в корме отборной кукурузы у яиц Лето яркий солнечный желток
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="advantage-item">
-							<div class="advantage-item__img">
-								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
-								</svg>
-								<img data-src="img/media/advantage-img/advantage-img-3.svg" alt="" uk-img>
-							</div>
-							<div class="advantage-item__text">
-								<div class="title-h3">Натуральный корм</div>
-								<div class="text">
-									Основу корма куриц составляет натуральная пшеница, кукуруза, соевые бобы, а также подсолнечник
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="advantage-item">
-							<div class="advantage-item__img">
-								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
-								</svg>
-								<img data-src="img/media/advantage-img/advantage-img-4.svg" alt="" uk-img>
-							</div>
-							<div class="advantage-item__text">
-								<div class="title-h3">Куры несушки лучших пород</div>
-								<div class="text">
-									Hisex Brown — голландская порода куриц-несушек, одна из самых популярных в мире
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="advantage-item">
-							<div class="advantage-item__img">
-								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
-								</svg>
-								<img data-src="img/media/advantage-img/advantage-img-5.svg" alt="" uk-img>
-							</div>
-							<div class="advantage-item__text">
-								<div class="title-h3">Двойной контроль</div>
-								<div class="text">
-									Только в марке Лето двойной контроль качества продукции перед упаковыванием
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="advantage-item">
-							<div class="advantage-item__img">
-								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
-								</svg>
-								<img data-src="img/media/advantage-img/advantage-img-6.svg" alt="" uk-img>
-							</div>
-							<div class="advantage-item__text">
-								<div class="title-h3">Размер — CО и С1</div>
-								<div class="text">
-									Используются столовые яйца отборной и первой категории (СО и С1)
-								</div>
-							</div>
-							<a href="#" class="advantage-item__link">
-								Подробнее про шкалу размеров
-							</a>
-						</div>
-					</li>
-				</ul>
-				<div class="center-box">
-					<svg width="100%" height="100%" class="yellow-ellipse-1">
-					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-1"></use>
-					</svg>
-					<svg width="100%" height="100%" class="yellow-ellipse-2">
-					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-2"></use>
-					</svg>
-					<img src="img/media/advantage-img/egg-green.png" alt="">
-				</div>
-			</div>
-		</div>
-	</section>
-
+	{% include './includes/components/main-banner.twig' %}
+	{% include './includes/components/advantages-section.twig' %}
 	{% include './includes/components/advantages-h-section.twig' with {'theme': 'green'} %}
 
 	{% include './includes/components/typebox-section.twig' with {'theme': 'green'} %}
